# geo3d

./: .gitignore  CLAUDE.md  README.md  download.py
dn-splatter/: pyproject.toml
dn-splatter/dn_splatter/: dn_datamanager.py  dn_model.py  dn_pipeline.py  regularization_strategy.py
dn-splatter/dn_splatter/data/: coolermap_dataparser.py  dn_dataset.py
dn-splatter/dn_splatter/scripts/: convert_colmap.py  normals_from_pretrain.py  poses_to_colmap_sfm.py
dn-splatter/dn_splatter/utils/: normal_utils.py
nerfstudio/nerfstudio/cameras/: camera_utils.py
nerfstudio/nerfstudio/data/: scene_box.py
nerfstudio/nerfstudio/data/datamanagers/: full_images_datamanager.py
nerfstudio/nerfstudio/data/utils/: dataloaders.py  dataparsers_utils.py
nerfstudio/nerfstudio/engine/: callbacks.py  optimizers.py  trainer.py
nerfstudio/nerfstudio/field_components/: activations.py
nerfstudio/nerfstudio/scripts/: render.py  train.py
nerfstudio/nerfstudio/utils/: writer.py
nerfstudio/nerfstudio/viewer/: viewer_elements.py
opf_scripts/: README.md  make_colmap_cameras_compatible.py  make_multicamera_transforms.py  pyopf_conversion_dixhite.py
